# papercuts

./: README.md  pyproject.toml
src/papercuts/: __init__.py  cli.py
tests/: test_cli.py
