[project]
name = "papercuts"
version = "0.1.0"
description = "Tiny CLI for logging agent workflow papercuts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
papercut = "papercuts.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/papercuts"]
